igt@i915_pm_rps@basic-api - fail - Failed assertion: freqs[CUR] <= freqs[MAX]
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12893/bat-dg2-11/igt@i915_pm_rps@basic-api.html
Starting subtest: basic-api
(i915_pm_rps:5524) CRITICAL: Test assertion failure function check_freq_constraints, file ../../../usr/src/igt-gpu-tools/tests/i915/i915_pm_rps.c:162:
(i915_pm_rps:5524) CRITICAL: Failed assertion: freqs[CUR] <= freqs[MAX]
(i915_pm_rps:5524) CRITICAL: Last errno: 22, Invalid argument
(i915_pm_rps:5524) CRITICAL: error: 1183 > 1175
Subtest basic-api failed.
**** DEBUG ****
(i915_pm_rps:5524) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/1'
(i915_pm_rps:5524) igt_pm-DEBUG: Test requirement passed: debugfs_fd != -1
(i915_pm_rps:5524) igt_sysfs-DEBUG: Condition fd < 0 occurred in function igt_sysfs_read, file ../../../usr/src/igt-gpu-tools/lib/igt_sysfs.c:335
(i915_pm_rps:5524) DEBUG: Test requirement passed: !(i915_is_slpc_enabled(drm_fd))
(i915_pm_rps:5524) DEBUG:
Check original min and max...
(i915_pm_rps:5524) DEBUG: gt freq (MHz): act=1550 cur=1533 min=300 max=2050 RP0=2050 RP1=300 RPn=300 boost=2050
(i915_pm_rps:5524) DEBUG:
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Gundla karthik added feature: GEM platform: DG1 platform: DG2 platform: RPL_S labels
added feature: GEM platform: DG1 platform: DG2 platform: RPL_S labels
- Reporter
The CI Bug Log issue associated to this bug has been updated by Gundlakarthik.
New filters associated
- DG1 DG2 RPL_S : igt@i915_pm_rps@basic-api - fail - Failed assertion: freqs[CUR] <= freqs[MAX]
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_112700v2/shard-dg1-12/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_112700v2/shard-dg1-16/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115270v5/bat-dg1-6/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12893/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12890/re-rpls-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12890/re-rpls-1/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12890/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8657/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115421v2/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115421v2/shard-dg1-17/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8654/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115465v1/shard-dg1-18/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_114510v4/shard-dg1-14/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_114510v4/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115469v1/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115471v1/shard-dg1-14/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115473v1/shard-dg1-14/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8656/shard-dg1-17/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8657/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Trybot_115452v2/shard-dg1-15/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12895/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8658/shard-dg1-16/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8658/shard-dg1-18/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8658/shard-dg1-18/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_114495v1/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12896/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12897/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_7211/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_7211/shard-dg1-15/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8659/shard-dg1-15/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115270v6/shard-dg1-14/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12895/shard-dg1-14/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12895/shard-dg1-17/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12896/shard-dg1-17/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12896/shard-dg1-17/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12897/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12897/shard-dg1-14/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12897/shard-dg1-17/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12898/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115109v5/shard-dg1-14/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115109v5/shard-dg1-18/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115109v5/shard-dg1-18/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8662/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12899/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115473v2/shard-dg1-15/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115473v2/shard-dg1-17/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_115473v2/shard-dg1-18/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12898/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12898/shard-dg1-14/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12898/shard-dg1-17/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12900/shard-dg1-14/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8664/shard-dg1-14/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_8664/shard-dg1-15/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12901/shard-dg1-14/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12901/shard-dg1-16/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12901/shard-dg1-18/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12902/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_113680v3/bat-dg2-11/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12902/shard-dg1-18/igt@i915_pm_rps@min-max-config-idle.html
- DG1 DG2 RPL_S : igt@i915_pm_rps@basic-api - fail - Failed assertion: freqs[CUR] <= freqs[MAX]
- Reporter
A CI Bug Log filter associated to this bug has been updated by Gundlakarthik.
Description: DG1 DG2 RPL_S : igt@i915_pm_rps@basic-api - fail - Failed assertion: freqs[CUR] <= freqs[MAX]
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND machine_tag IS IN ["DG12", "ADL_N-HW", "RPL_P", "DG21", "RPL_S"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rps@min-max-config-idle", "igt@i915_pm_rps@min-max-config-loaded", "igt@i915_pm_rps@basic-api"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: freqs\[CUR\] <= freqs\[MAX\]'
New failures caught by the filter:
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1333/bat-adln-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1334/bat-adln-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1334/bat-adln-1/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1335/bat-adln-1/igt@i915_pm_rps@min-max-config-loaded.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1335/bat-adln-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1336/bat-adln-1/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1336/bat-adln-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1337/bat-adln-1/igt@i915_pm_rps@basic-api.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1337/bat-adln-1/igt@i915_pm_rps@min-max-config-idle.html
- https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_1337/bat-adln-1/igt@i915_pm_rps@min-max-config-loaded.html
- Gundla karthik added platform: ADL_N label
added platform: ADL_N label
- Reporter
A CI Bug Log filter associated to this bug has been updated by Gundlakarthik.
Description: ADL_N DG1 DG2 RPL_S : igt@i915_pm_rps@basic-api - fail - Failed assertion: freqs[CUR] <= freqs[MAX]
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND machine_tag IS IN ["DG2", "ADL_N-HW", "RPL_P", "DG1", "RPL_S"] AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@i915_pm_rps@min-max-config-idle", "igt@i915_pm_rps@min-max-config-loaded", "igt@i915_pm_rps@basic-api"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: freqs\[CUR\] <= freqs\[MAX\]'
No new failures caught with the new filter
- Reporter
On CI, last seen this issue on April 26, 2023, 9:01 p.m. Closing this issue as can not reproduce.
- LAKSHMINARAYANA VUDUM closed
closed